--- a/zx/家里尺寸.md
+++ b/zx/家里尺寸.md
@@ -2,24 +2,25 @@
 
 * 总面积：31.2994+6.438+15.719+7.367+7.668+9.551+3.09+3.765+2.797+1.143=88.83
 * 半面积：6.438+1.143+2.384+1.984+2.068+3.099=17.116
-* 总柜子投影面积（高按2.5m算）：3.9875+2.425+5.9375+3.975=16.325
-* 总橱柜投影面积：
+* 总柜子投影面积（高按2.5m算）：6.675+2.425+8.375+3.75+3.75+7.75=32.725
+* 总橱柜长度：2.67+1.2+0.6=4.47
 * 总木地板面积：15.719+7.668+7.367=30.754
 * 总地砖面积：31.2994+6.438+9.551+3.099+3.765+2.797=56.9494
 
-依据：![](./装修资料/家里尺寸.jpg)
+依据：![](../装修资料/家里尺寸.jpg)
 
 ## 客厅
 
 * 面积：24.578+1.2474（卧室过道）+3.835（玄关）+1.639（厕所门口）=31.2994
-* 鞋柜面积：1.595*2.5（预估高度）=3.9875
+* 鞋柜面积：2.67*2.5（预估高度）=6.675
 * 卫生间外柜面积：0.97*2.5 = 2.425
+* 餐边柜：3.1*2.5=7.75
 
 ## 阳台
 
-* 面积：6.438 
-* 窗户面积：(1.27+1.27+5.07)*2.3=17.503
-* 窗帘长度：7.61
+* 地砖面积：1.26*5.07=6.3882
+* 窗户面积：(1.26+5.07+1.26)*0.6=4.554
+* 窗帘长度：7.6
 
 ## 空调机位
 
@@ -28,16 +29,17 @@
 ## 主卧
 
 * 面积：11.83+0.663（次卧墙壁差）+0.842（主卧进门）+2.384（飘窗）=15.719
-* 柜子面积：2.375*2.5（预估高度）= 5.9375
+* 柜子面积：3.35*2.5（预估高度）= 8.375
 
 ## 多功能房
 
 * 面积：5.383+1.984（飘窗）=7.367
+* 柜子面积：1.5*2.5（预估高度）= 3.75
 
 ## 次卧
 
 * 面积：5.6+2.068（飘窗）=7.668
-* 柜子面积：1.59*2.5（预估高度）= 3.975
+* 柜子面积：1.5*2.5（预估高度）= 3.75
 
 ## 厨房
 
