--- a/木材选择.md
+++ b/木材选择.md
@@ -46,7 +46,7 @@
 饰面主要是为了好看和摸着舒服，其他不用考虑
 
 * 三聚氰胺：大多颗粒板的外饰面都是这个
-* PET肤感膜：耐磨耐划，但是无造型。有反光的和哑光（肤感）的，适合用在客厅厨房浴室，容易清洁。略贵
+* PET膜：耐磨耐划，但是无造型。有反光的和哑光（肤感）的，适合用在客厅厨房浴室，容易清洁。略贵
 * pvc：一般是密度板造型后表面上的
 * 其他：pet、烤漆、木皮，普通装修不用考虑
 
