--- a/瓷砖选择.md
+++ b/瓷砖选择.md
@@ -28,6 +28,7 @@
 
 ## 选购要点
 
+* 看外包装上的国标等级以及生产地址到底是哪里，所谓的广东砖可能是广东品牌，不一定是广东生产
 * 胚体：瓷砖背面，地砖要瓷质砖，吸水率小于0.5%，倒水上去不会吸收，砖立起来弹一下中间，有铜钟一样的声音；胚体颜色洁白无杂质；背面滴墨水，不渗透才是低吸水率（低于千分之三）的
 * 釉面：瓷砖正面，防滑系数要在0.5以上；用刀子钥匙画不出道道
 * 平整度：两块瓷砖正对正贴一起，看看是不是能贴死，边角有没有翘起来；左右排列一起，看看接缝处整不整齐；
