--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -31,6 +31,7 @@
 * 电线盒子和电线管接头处要用线管锁扣连接，否则有空隙，有漏电风险
 ![](./img/%E7%BA%BF%E7%AE%A1%E9%94%81%E6%89%A3.jpg)
 * 装修过程中水龙头最好配个水管，后期油工要大量用水，没有水管的话水容易溅到瓷砖下面去，影响美缝。
+* 入户总阀用球阀，需要调节水流大小的阀门用角阀（比如热水器），需要流量大的地方用球阀（比如某些马桶冲水，其他一般没有）
 
 ## 卫生间防水
 
