--- a/厨房设计.md
+++ b/厨房设计.md
@@ -34,3 +34,12 @@
 * 地柜做高低台
 * 洗切区高度为手肘高度-150mm
 * 炒菜区高度为手肘高度-230mm
+
+
+## 铝扣板吊顶
+
+* 选300*600的
+* 正面选烤漆工艺，哑光
+* 背面防锈涂层
+* 总共60片，11套配件
+* 安装铝扣板的时候从灯的位置开始安装，这样虽可能会浪费板子，但避免从边上开始，灯的位置不合适
