--- a/辅材选择.md
+++ b/辅材选择.md
@@ -13,7 +13,7 @@
 
 ## 密封胶选择
 
-分为水基和硅基和混合
+从成分分类，分为水基和硅基和混合
 
 ### 水基乳胶
 
@@ -30,6 +30,25 @@
 * 不适用于粗糙表面，最适合在金属、塑料、玻璃等平滑的表面上
 * 户外型号不适合用在室内，因为有挥发性物质
 * 使用有一定难度
+
+### 功能分类
+
+#### 玻璃胶
+
+#### 美容胶
+
+玻璃胶的升级版
+
+#### 耐候胶
+
+室外用，一般是门窗的玻璃型材交界处
+
+### 品牌
+
+* 硅宝
+* 瓦克
+* 汉高百得
+* 西卡
 
 ## 地漏
 
