--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -33,6 +33,10 @@
 * 装修过程中水龙头最好配个水管，后期油工要大量用水，没有水管的话水容易溅到瓷砖下面去，影响美缝。
 * 入户总阀用球阀，需要调节水流大小的阀门用角阀（比如热水器），需要流量大的地方用球阀（比如某些马桶冲水，其他一般没有）
 
+### 强电箱
+
+* 空开：正泰比德力西好点，阿里巴巴上的NXB-63系列4块多钱起就够用了
+
 ## 卫生间防水
 
 * 角阀出水口周边要先用堵漏剂涂刷，再刷防水
