--- a/石材选择.md
+++ b/石材选择.md
@@ -19,7 +19,7 @@
 * 厚度1.5cm以上的，要注意是石英石厚度不是边缘折下来的高度
 * 检验质量的方法：用打火机烧不变黑、小刀钥匙划不出伤、水性笔不渗色
 * 台下盆和尺寸要在工厂切割，不要让工人现场做。
-* 龙溪建材石英石90以上的360一米，宽60cm
+
 
 ## 门槛石
 
@@ -28,6 +28,12 @@
 * 卫生间门口的门槛石要磨边
 * 大理石长了还要加筋
 * 龙溪建材问了一个900*220的，大理石90花岗岩80
+
+## 问价
+
+* 一线品牌：中迅，五百多一米
+* 其他品牌：大渡口居然之家，三百多一米，石英砂95，15mm厚，台下盆开槽100一个
+* 龙溪建材石英石90以上的360一米，宽60cm
 
 ## 购买地方
 
