--- a/卫生间设计.md
+++ b/卫生间设计.md
@@ -13,7 +13,7 @@
 * 要带镜灯的镜柜
 * 柜子下水做90°墙排
 * 镜柜高度不能太低，否则会开门会碰到电动牙刷等东西
-* 下沉只有300
+* 下沉只有300，沉箱降板少于350mm高的卫生间不建议安装蹲便器
 * 淋浴房玻璃做45度钻石，总长度1.53m，高度2m，总3.06平方
 
 ## 主卫
