--- a/窗户选择.md
+++ b/窗户选择.md
@@ -9,6 +9,10 @@
 
 系统门窗是有国标的
 
+## 家里参数
+
+* 楼层7楼体型系数≤0.40
+
 ## 平开窗
 
 * 两个导轨外低内高，用于挡水，可以在内部有一个挡水板
@@ -99,10 +103,12 @@
 * 安装完了要打密封胶
 
 ## 重庆标准
+
 参考
 
+
 * 《民用建筑外门窗应用技术标准》DBJ50/T-065-2020
-* 《居住建筑节能65%（绿色建筑）设计标准》DBJ50-071-2020
+* 《居住建筑节能65%（绿色建筑）设计标准》DBJ50-071-2020 第9页
 
 杨坤推荐
 
