--- a/窗户选择.md
+++ b/窗户选择.md
@@ -12,6 +12,7 @@
 ## 家里参数
 
 * 楼层7楼体型系数≤0.40
+* 窗墙面积比
 
 ## 平开窗
 
@@ -112,7 +113,7 @@
 
 杨坤推荐
 
-* 型材宽度：平开65以上，推拉80以上
+* 型材宽度：推拉80以上，平开65以上
 * 型材壁厚：窗户1.8mm，门型2.0mm
 * 隔热条宽度：18.6mm以上
 * 发泡填充：无
