--- a/重庆建材市场列表.md
+++ b/重庆建材市场列表.md
@@ -1,19 +1,24 @@
 # 重庆建材市场
 
+* 渝北红星美凯龙至尊mall：轻轨站重光
+* 国博红星美凯龙：轻轨站国博中心
+* 园博园居然之家：轻轨站园博园
+* 西部建材城：轻轨园博园
+* 京东线下体验店：轻轨保税港站
+* 红星美凯龙渝北：轻轨站冉家坝
+* 花卉园居然之家：轻轨站花卉园
+* 龙溪建材市场：轻轨站花卉园
+* 建玛特购江北店：轻轨红旗河沟
+* 北滨路居然之家：化龙桥河对面金源时代，金源路口公交站
+* 建玛特购金源路店：化龙桥河对面金源时代，金源路口公交站
 * 南坪红星美凯龙：轻轨站工贸
 * 二郎居然之家：轻轨站二郎
 * 二郎红星美凯龙：轻轨站二郎
-* 红星美凯龙渝北：轻轨站冉家坝
-* 茶园红星美凯龙：轻轨站茶园
-* 渝北红星美凯龙至尊mall：轻轨站重光
-* 国博红星美凯龙：轻轨站国博中心
-* 大渡口居然之家：轻轨站天堂堡
-* 北滨路居然之家：化龙桥河对面金源时代
-* 花卉园居然之家：轻轨站花卉园
-* 园博园居然之家：轻轨站园博园
-* 凯恩国际：轻轨站八公里
+* 新世界建材市场：轻轨站华龙
 * 巴山建材市场：轻轨站巴山
-* 八一建材市场：轻轨站石新路
+* 国窖建材市场：轻轨站巴山
+* 八益建材市场：轻轨站石新路
 * 马家岩建材城：轻轨站天星桥
-* 龙溪建材市场：轻轨站花卉园
-* 京东线下体验店：轻轨保税港站
+* 铠恩国际：轻轨站八公里
+* 茶园红星美凯龙：轻轨站茶园
+* 大渡口居然之家：轻轨站天堂堡
