--- a/家电选择.md
+++ b/家电选择.md
@@ -26,6 +26,17 @@
 * 风口软连接：国标三防布，不到国标的不行
 * 其他：直管连接用管路连接件，不能直接焊起来，可能漏氟；分歧管间距符合标准；如果有提升泵要用门字形反水弯，避免冷凝水倒流；排水走下水管不走污水管
 
+### 安装问题
+
+* 铜管厚度
+* 冷凝水管什么材质的
+* 内机用不用双螺母垫片
+* 丝杆型号是多少
+* 外机有没有橡胶减震垫
+* 风口用不用国标三防布
+* 管路连接是用电焊还是管路连接件，分歧管间距多少，提升水泵做不做门字型返水弯
+* 安装工具有没有弯管器、胀管器、修边器、充氮保护焊
+
 ### 价格
 
 * 家博会 美的单风扇 28000
