--- a/窗户选择.md
+++ b/窗户选择.md
@@ -42,6 +42,7 @@
 * 绿玻：爆率比较高便宜，隔绝紫外线
 * 超白玻璃（最贵）：光线透过率最高，要阳光的必选。不能反射红外线，夏天很热
 * low-e玻璃：隔紫外线，隔热，但会拦截一部分亮度（光线透过率没这么高），帮助家里节能。low-e玻璃有不同的透光率选择，越黑的越节能。重庆用这个比较好，但是要选择合适的透光率。有单银玻璃、双银玻璃、三银玻璃之分，银面层越多透光率不一定越低，但是越贵。
+* low-e工艺分为在线low-e和离线low-e，在线是玻璃出厂的时候镀上low-e膜，更省成本，但性能比离线差。家用用离线比较多
 
 ## 玻璃工艺
 
@@ -114,3 +115,8 @@
 * 玻璃间隔条：普铝冷边
 * low-e：离线单银 辐射率ε≤0.1
 * K值≤2.5
+
+## 好品牌
+
+* 森鹰：冉家坝红星美凯龙负一楼
+* 绿盾中天：
