--- a/重庆建材市场列表.md
+++ b/重庆建材市场列表.md
@@ -8,6 +8,7 @@
 * 红星美凯龙渝北：轻轨站冉家坝
 * 花卉园居然之家：轻轨站花卉园
 * 龙溪建材市场：轻轨站花卉园
+* 第六空间国际家居：渝北sm广场旁
 * 建玛特购江北店：轻轨红旗河沟
 * 北滨路居然之家：化龙桥河对面金源时代，金源路口公交站
 * 建玛特购金源路店：化龙桥河对面金源时代，金源路口公交站
