--- a/卫生间设计.md
+++ b/卫生间设计.md
@@ -68,6 +68,12 @@
 * 花洒软管不要不锈钢多段的，容易积水垢，要pvc软管的
 * 花洒出水孔要液态硅胶孔的，容易清理不易堵塞
 
+## 浴霸
+
+* 电机保修年限，5年说明质量可以
+* 功率2500w以上
+* 京东京造320元
+
 ## 验收时
 
 * 验收地面时不要用水测卫生间地面坡度，因为还没做美缝，水会渗漏进瓷砖下方，要用玻璃珠做测试。
