--- a/家电选择.md
+++ b/家电选择.md
@@ -97,6 +97,7 @@
 * 容量选择：一个人100L
 * 除菌净味技术可以认为全没用。什么EPP、臭氧除菌、光触媒，全没用。
 * 循环数和系统数用处不大，不如大品牌温控调校更好的
+* 系统数就是蒸发器数
 * 能效等级一到五数字越小越好
 * 选购看升数、开门方式、嵌入式（左右预留空间多少）、是否超薄，品牌就行
 * 京东上大多冰箱都是5k-6k（10月）
@@ -108,10 +109,11 @@
 * 控温技术：监测箱内温度从而让温度稳定保持，不会因为东西多冷藏冷冻效果变差。
 * 控湿技术：风冷冰箱会加速内部水分流失，蔬菜会干，所以要根据湿度计往里加湿。
 * 除菌：很多玄乎的名字背后都是离子发生器除菌，几乎没用。
-* 除味：活性炭吸附的有点用，但是吸饱和之后还能不能用不清楚，总的来说有点用但不多
+* 除味：活性炭吸附的有点用，但是吸饱和之后还能不能用不清楚，总的来说有点用但不多。海尔EPP超净
 * 控氧技术：减少新鲜蔬菜的呼吸氧化，可以让菜保存更长时间。免费做法：给蔬菜套个袋子密封。
 * 保鲜技术：迷瞪测试基本没用，核心在于要让温度稳定，温度不稳定的菜容易坏
-* 尺寸
+* 尺寸。海尔全空间保鲜，干湿分区存储，变温区
+* 海尔BCD-466WGHFD15B8U1 5000内
 ![](./img/海尔510尺寸.png)
 
 美的
@@ -221,6 +223,7 @@
 * 瀑布浴：出水口有一个增压泵，水压不够则可以增压。没太大用
 * 一级能效：燃气燃烧的热量97%以上全变成水温，节能。只有上置风机才能达到一级能效。一级能效的都是冷凝机，需要排出冷凝水，不太好。
 * 美的 16m4 2999 水伺服 16l
+* 美的 mate 2000以内 下置风机 增压水伺服 密闭稳燃舱 薄
 
 ### 品牌
 
