--- a/家电选择.md
+++ b/家电选择.md
@@ -71,6 +71,7 @@
 
 * 国产TCL、海信最好，TCL有华星光电，是国产唯一能生产屏幕的
 * 电视分为LCD（液晶电视，商场里叫的LED就是LCD）和OLED屏幕的电视，花里胡哨名字的基本都是LCD。他们都是自发光的屏幕，但是显色原理不一样。
+* 雷鸟鹏7pro 75寸 宽167cm 高96cm
 
 ### LCD(LED)
 
