--- a/灯光选择.md
+++ b/灯光选择.md
@@ -6,6 +6,8 @@
 ![](./img/%E5%85%89.jpg)
 
 灯光设计要考虑到空间的结构性。所谓的无主灯设计核心理念就是，给每个功能区单独的灯光。所以无主灯简单的说就是给饭厅多个灯光，客厅多个灯光，门廊多个灯光。拓展一下，要利用三维立体的灯光设计，灯不一定是从顶上射到地上的，可以是横着的，漫反射出来的。
+* 光通量/面积=照度 例：灯具光通量1000lm，照在10平的墙面上，墙面的照度就是100lx
+* 灯具光通量一般都有标记
 
 ## 人的感知
 
@@ -114,6 +116,12 @@
 * 色温3500k-4000k，整个空间色温要一样
 * 功率7-9w
 * 坐沙发上不要直接看见光源，可以拿几个射灯照沙发背后过道
+
+### 阳台
+
+* 面积6.38平，照度80lx，灯具总光通量1500lm
+* 可选3盏5w灯
+* 照度80lx不算亮，可以营造一种氛围感
 
 ## 安装经验
 
