--- a/家电选择.md
+++ b/家电选择.md
@@ -99,6 +99,7 @@
 * 除菌净味技术可以认为全没用。什么EPP、臭氧除菌、光触媒，全没用。
 * 循环数和系统数用处不大，不如大品牌温控调校更好的
 * 系统数就是蒸发器数
+![](./img/双蒸发器.png)
 * 能效等级一到五数字越小越好
 * 选购看升数、开门方式、嵌入式（左右预留空间多少）、是否超薄，品牌就行
 * 京东上大多冰箱都是5k-6k（10月）
@@ -113,7 +114,7 @@
 * 除味：活性炭吸附的有点用，但是吸饱和之后还能不能用不清楚，总的来说有点用但不多。海尔EPP超净
 * 控氧技术：减少新鲜蔬菜的呼吸氧化，可以让菜保存更长时间。免费做法：给蔬菜套个袋子密封。
 * 保鲜技术：迷瞪测试基本没用，核心在于要让温度稳定，温度不稳定的菜容易坏
-* 尺寸。海尔全空间保鲜，干湿分区存储，变温区
+* 特色技术：海尔全空间保鲜，干湿分区存储，变温区
 * 海尔BCD-466WGHFD15B8U1 5000内
 ![](./img/海尔510尺寸.png)
 
@@ -168,6 +169,7 @@
 * 线下 s55 4999 热风烘干 14套 可分层洗 变频电机
 
 海尔W5000 迷瞪4900
+方太03-G6 5980 线上线下同款
 
 ## 烟机灶具
 
