--- a/家电选择.md
+++ b/家电选择.md
@@ -127,18 +127,28 @@
 
 * 冷水洗：支持冷水洗衣，对于纤维衣服有保护作用。大部分滚筒洗衣机都是热水洗的
 * 气泡洗：产生很多气泡，利用气泡爆炸的力量来清洁衣物
-* 电机：大部分都是bldc皮带变频电机，fpa直驱电机噪音更小，寿命更长。皮带电机六七年之后要更换皮带
+* 电机：大部分都是bldc皮带变频电机，fpa直驱电机噪音更小，寿命更长。皮带电机六七年之后要更换皮带。皮带和直驱电机效果上差不多
+* 智能投放：可以根据衣服自动放洗衣液
 
 海尔
 
-* 智能投放：有点用，可以根据衣服自动放洗衣液
-* 精华洗：省水，先把水和洗衣液混合，再投入洗衣舱。传统的是在洗衣舱中浸泡混合的，混合不是很充分，洗衣效果不如预混合。
-* 甩干转速：
+* 主打洗衣更好，比如洗得更快，噪音更小，直驱电机
+* 精华洗：省水，先把水和洗衣液混合，再投入洗衣舱。传统的是在洗衣舱中浸泡混合的，混合不是很充分，洗衣效果不如预混合。有人说精华洗洗不干净，样本2
+* 直驱电机：FPA直驱电机，噪音更小
+* MATE82S 3000 性价比很高，精华洗2.0，直驱电机，智能投放
 
 小天鹅
 
-* 水魔方：支持冷水洗和气泡洗
-* 除菌技术：uabt紫外线银离子杀菌
+* 主打不伤衣
+* 水魔方：水流变化很多样
+* 冷水洗（基础）：减少褪色
+* 大桶径：小天鹅535mm大桶径，洗衣效果更好，普通的都是495mm
+* 超微静泡：类似于方太的空气洗，水中参入气泡，去污更强
+* 蓝氧：有更好的氧化效果
+* 除菌技术：uabt紫外线银离子杀菌，低温除菌
+* 水魔方洗烘套86+35：6000算便宜的时候，过节
+* 要水魔方，冷水洗，智能投放功能就够了，大桶径能上则上
+* TG的是洗衣机，TD的是洗烘一体，TH是烘干机
 
 ## 烘干机
 
@@ -146,8 +156,10 @@
 
 * 热泵烘干：是低温烘干，更护衣物，效率较高，去毛效果好，省电
 * 冷凝烘干：
-* 正反转：可以更容易抖散衣物，烘干更彻底。一般的都是8:1，海尔高端款176有1:1正反转
-* 噪音大家都差不多，50-60分贝，如果衣服上有金属会撞击得很响，可以用一些小的纸包把扣子拉链包起来
+* 正反转：比例越接近1可以更容易抖散衣物，烘干更彻底。一般的都是8:1，海尔高端款176有1:1正反转
+* 噪音大家都差不多，变频的相对小一点，如果衣服上有金属会撞击得很响，可以用一些小的纸包把扣子拉链包起来
+* 绒毛过滤：滤网层数，4层的还不错，2层3层的也很常见
+* 冷凝器自清洁：
 
 ## 洗碗机
 
