更新 水槽选择.md

--- a/水槽选择.md
+++ b/水槽选择.md
@@ -44,6 +44,7 @@
 
 * 不锈钢水槽有带纳米涂层的，能管个一年半载的。
 * 水槽下水可以用容易取下来清洗的u型管
+* 不锈钢水槽背面要带防冷凝涂层
 
 ## 安装工艺
 
@@ -56,7 +57,7 @@
 
 ## 结论
 
-* 厨房用手工不锈钢水槽，厕所用石英石水槽或陶瓷一体水槽
+* 厨房用手工不锈钢水槽，厕所用陶瓷一体水槽
 * 要买水槽不锈钢有龙头开孔的，不要开孔在台面的
 * 洗杯器没有用
 * 皂液器没有用
