--- a/全屋定制选择.md
+++ b/全屋定制选择.md
@@ -30,6 +30,13 @@
 
 * 厨房台面单独找石材商定，因为全屋定制可能不是很了解石材，它们主要做板材的
 
+## 衣柜
+
+* 挂裤子的区域用可拉出的裤架
+![](./img/裤架.jpg)
+* 抽屉做外露的，不要把抽屉做到柜子里面
+
+
 ## 浴室柜
 
 * 找定制做一般比成品的贵
