--- a/水槽选择.md
+++ b/水槽选择.md
@@ -45,6 +45,8 @@
 * 不锈钢水槽有带纳米涂层的，能管个一年半载的。
 * 水槽下水可以用容易取下来清洗的u型管
 * 不锈钢水槽背面要带防冷凝涂层
+* 要选单侧排水的，这样水槽下方还能放下净水器，垃圾处理器等东西
+![](./img/单侧排水.jpg)
 
 ## 安装工艺
 
@@ -62,3 +64,9 @@
 * 洗杯器没有用
 * 皂液器没有用
 * 台控没有太大用
+
+## 品牌
+
+* 浪鲸还不错 SSKS605 SKKS7281 侧排水 抽拉龙头 沥水板导轨 纳米涂层 1.0板材 1000
+* 日丰一千左右能买到带水龙头的 侧排水 抽拉龙头 导轨 纳米涂层 1000
+* 箭牌的设计还不错 1400
