--- a/灯光选择.md
+++ b/灯光选择.md
@@ -29,6 +29,11 @@
 * 显色指数：Ra>95的灯具，重点关注R9，显红色，要高到和其他差不多，90以上，蓝光尽量压低一点。
 * 色容差SDCM：色容差高了同样4000k会有偏色情况，要色容差小于3SDCM的比较好
 * 灯功率越高越需要散热，用久了之后发光能力会下降。冷轧钢散热好一些
+* 光束角：重点照明用24，洗墙用36
+![](./img/光斑.png)
+* 布光角：光束角以外但有亮光的区域
+* 光源深度：决定了布光角和光束角的差值大不大
+![](./img/光源深度.png)
 
 ### 灯带
 
