--- a/zx/家里尺寸.md
+++ b/zx/家里尺寸.md
@@ -40,16 +40,18 @@
 
 * 面积：5.6+2.068（飘窗）=7.668
 * 柜子面积：1.5*2.5（预估高度）= 3.75
+* 窗边柜面积：0.7*0.75+1.88*0.65=1.806
 
 ## 厨房
 
 * 面积：6.604+2.659+0.288=9.551
-* 橱柜米数：4.52m 
+* 橱柜米数：2.62+1.2+0.6（包含烟道的拐角）=4.42m 
 * 烟道：0.51*0.26=0.1326m2
 
 ## 生活阳台
 
 * 面积：3.099
+* 柜子：0.3
 
 ## 主卫
 
