--- a/zx/家里尺寸.md
+++ b/zx/家里尺寸.md
@@ -2,8 +2,9 @@
 
 * 总面积：31.2994+6.438+15.719+7.367+7.668+9.551+3.09+3.765+2.797+1.143=88.83
 * 半面积：6.438+1.143+2.384+1.984+2.068+3.099=17.116
-* 总柜子投影面积（高按2.5m算）：6.675+2.425+8.375+3.75+3.75+7.75=32.725
-* 总橱柜长度：2.67+1.2+0.6=4.47
+* 总柜子投影面积（高按2.5m算）：(2.67+0.97+3.1+3.35+1.5+1.5+0.3)*2.5=33.475
+* 次卧窗边柜长度：2.58
+* 总橱柜长度：4.99*2=9.98
 * 总木地板面积：15.719+7.668+7.367=30.754
 * 总地砖面积：31.2994+6.438+9.551+3.099+3.765+2.797=56.9494
 
@@ -40,18 +41,18 @@
 
 * 面积：5.6+2.068（飘窗）=7.668
 * 柜子面积：1.5*2.5（预估高度）= 3.75
-* 窗边柜面积：0.7*0.75+1.88*0.65=1.806
+* 窗边柜长度：2.58m
 
 ## 厨房
 
 * 面积：6.604+2.659+0.288=9.551
-* 橱柜米数：2.62+1.2+0.6（包含烟道的拐角）=4.42m 
+* 橱柜米数：2.62+1.2+0.6（包含烟道的拐角）+0.57=4.99m 
 * 烟道：0.51*0.26=0.1326m2
 
 ## 生活阳台
 
 * 面积：3.099
-* 柜子：0.3
+* 柜子：0.3*2.5（预估高度）=0.75
 
 ## 主卫
 
