--- a/全屋智能方案预留.md
+++ b/全屋智能方案预留.md
@@ -16,7 +16,7 @@
 
 ## 灯光控制
 
-* 使用普通灯+零火智能开关的方案，需要水电时在开关里留零线
+* 先使用智能灯+凌动开关模式，比较省成本，未来逐渐增加智能开关。现在需要水电时在开关盒里留零线
 * 单火智能开关有鬼火现象，不好
 * 普通灯缺点是不能调光调色
 * 凌动开关：类似于银行开门按钮，按下自动回位
