--- a/家电选择.md
+++ b/家电选择.md
@@ -98,17 +98,16 @@
 
 * 容量选择：一个人100L
 * 除菌净味技术可以认为全没用。什么EPP、臭氧除菌、光触媒，全没用。
-* 循环数和系统数用处不大，不如大品牌温控调校更好的
-* 系统数就是蒸发器数
+* 双系统（双蒸发器）效果更好
 ![](./img/双蒸发器.png)
 * 能效等级一到五数字越小越好
 * 选购看升数、开门方式、嵌入式（左右预留空间多少）、是否超薄，品牌就行
 * 京东上大多冰箱都是5k-6k（10月）
+* 开门方式：十字门、法式（有抽屉）、对开门
+* 嵌入式：要在做橱柜前确定好冰箱，按尺寸定制橱柜，冰箱下方散热
 
 海尔
 
-* 开门方式：十字门、法式（有抽屉）、对开门
-* 嵌入式：要在做橱柜前确定好冰箱，按尺寸定制橱柜，冰箱下方散热
 * 控温技术：监测箱内温度从而让温度稳定保持，不会因为东西多冷藏冷冻效果变差。
 * 控湿技术：风冷冰箱会加速内部水分流失，蔬菜会干，所以要根据湿度计往里加湿。
 * 除菌：很多玄乎的名字背后都是离子发生器除菌，几乎没用。
@@ -116,11 +115,16 @@
 * 控氧技术：减少新鲜蔬菜的呼吸氧化，可以让菜保存更长时间。免费做法：给蔬菜套个袋子密封。
 * 保鲜技术：迷瞪测试基本没用，核心在于要让温度稳定，温度不稳定的菜容易坏
 * 特色技术：海尔全空间保鲜，干湿分区存储，变温区
+* 大部分都是单蒸发器
 * 海尔BCD-466WGHFD15B8U1 5000内
 ![](./img/海尔510尺寸.png)
 
 美的
 
+* 双系统双循环：两个出风口，串味几率更低，温控更稳定
+* 除味：PST>PT
+* 超薄嵌入式：两边留1cm即可，厚度60cm和橱柜齐平，下置散热
+* 微晶一周鲜：美的7000+的产品和colmo上才有，不用
 * 尺寸
 ![](./img/美的bcd508尺寸1.png)
 ![](./img/美的bcd508尺寸2.png)
