--- a/家电选择.md
+++ b/家电选择.md
@@ -158,14 +158,20 @@
 
 ## 烘干机
 
-洗烘套装：小天鹅86+32性价比很高的时候是3000+到4000开头，尺寸
+洗烘套装：小天鹅86+32性价比很高的时候是3000+到4000开头
 
-* 热泵烘干：是低温烘干，更护衣物，效率较高，去毛效果好，省电
-* 冷凝烘干：
-* 正反转：比例越接近1可以更容易抖散衣物，烘干更彻底。一般的都是8:1，海尔高端款176有1:1正反转
+* 热泵烘干：是低温烘干，更护衣物，效率较高，去毛效果好，省电。热泵->双擎热泵->双擎热泵变频
+* 正反转：比例越接近1可以更容易抖散衣物，烘干更彻底。一般的都是8:1，双擎热泵就有1:1正反转，两个热泵正反转各一个。
+* 变频定频：影响噪音，变频噪音较小。
 * 噪音大家都差不多，变频的相对小一点，如果衣服上有金属会撞击得很响，可以用一些小的纸包把扣子拉链包起来
 * 绒毛过滤：滤网层数，4层的还不错，2层3层的也很常见
-* 冷凝器自清洁：
+
+海尔
+
+* 176：EHGS100176XSU1 6799
+* MATE：EHGS100MATE7SU1 6799 功能一样，外观些许区别
+* 176xs套装：XQG100-BD14376LU1+EHGS100176XSU1 洗衣机精华洗、fpa直驱、双智能投放；烘干机双擎热泵，4层过滤
+* 可蹲176xs套装，小红书说4000+，有点离谱
 
 ## 洗碗机
 
