更新 家电选择.md

--- a/家电选择.md
+++ b/家电选择.md
@@ -171,7 +171,7 @@
 * 176：EHGS100176XSU1 6799
 * MATE：EHGS100MATE7SU1 6799 功能一样，外观些许区别
 * 176xs套装：XQG100-BD14376LU1+EHGS100176XSU1 洗衣机精华洗、fpa直驱、双智能投放；烘干机双擎热泵，4层过滤
-* 可蹲176xs套装，小红书说4000+，有点离谱
+* 可蹲176xs套装，小红书说4000+，有点离谱。抖音直播间元旦8000内
 
 ## 洗碗机
 
