更新 家电选择.md

--- a/家电选择.md
+++ b/家电选择.md
@@ -144,6 +144,7 @@
 * 精华洗：省水，先把水和洗衣液混合，再投入洗衣舱。传统的是在洗衣舱中浸泡混合的，混合不是很充分，洗衣效果不如预混合。有人说精华洗洗不干净，样本2
 * 直驱电机：FPA直驱电机，噪音更小
 * MATE82S 3000 性价比很高，精华洗2.0，直驱电机，智能投放
+* 抖音海尔智浦直播间，主播懂很多。晚上没人的时候问比较方便
 
 小天鹅
 
