更新 全屋智能方案预留.md

--- a/全屋智能方案预留.md
+++ b/全屋智能方案预留.md
@@ -22,6 +22,11 @@
 * 凌动开关：类似于银行开门按钮，按下自动回位
 * 很多智能灯支持凌动模式，捕捉短时通断电实现开关切换。非智能灯不能使用凌动开关
 
+## 凌动开关
+
+* 使用普通开关自己粘贴电池弹簧弹片来改
+* 弹簧高度要根据开关的按钮高度来买
+
 ## 窗帘控制
 
 * 杜亚M2窗帘电机：用料扎实，杜亚是电机界的龙头老大
