更新 家电选择.md

--- a/家电选择.md
+++ b/家电选择.md
@@ -216,6 +216,7 @@
 * 油脂分离度：滤网越密油脂分离度越高，但是越容易被凝结的油堵住。油脂分离度低了油就会附着在电机等部件上，久了对电机伤害很大。一般分离度高的品牌都有办法选密度刚好的滤网，尽量拦住油，且不会被凝结的油堵住。所以油脂分离度越高的型号一般都更好。方太老板能做90+
 * 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，油脂分离度越低外面板越不容易沾油。本质上自清洗只是延缓拆机清洗的时间。方太老板根本没有自清洗，因为它们的油脂分离度比较高，不容易沾油。
 * 要想安装成尽量无缝，应该先安装油烟机，再安装吊柜
+* 安装无缝的话要安装前淘宝买一个油烟机升降挂钩，到时候用上就可以无缝
 * 工作风量：新国标提出
 * 工作噪声：新国标提出
 
