--- a/装修前期笔记/瓷砖选择.md
+++ b/装修前期笔记/瓷砖选择.md
@@ -22,6 +22,7 @@
 * 瓷片泡水后再贴，可以在上墙后不吸收水泥砂浆里的水分，粘贴更牢固，不容易收缩。不泡水就像我们的厕所瓷砖那样裂了。
 * 验收瓷砖时用硬币在四个角转一下，不能卡住，卡住说明没有找平
 * 海棠角要包进贴砖钱里面，很多公司把它算成增项，而且很贵
+* 海棠角要事先让瓷砖店老板确定有多少块做海棠角，确认后让工厂水刀切割，工人现场切割效果没这么好
 * 贴砖的时候要用水平仪打激光，以防贴出来不方，从而有缝
 * 不能用海沙，要用河沙，海沙会长真菌
 * 地砖铺好后，要在上面铺石膏板，很便宜十来块一张，可以防止后续步骤刮伤瓷砖以及掉沙
