--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -20,7 +20,8 @@
 ## 阳台
 
 * 地砖面积：1.26*5.07=6.3882
-* 窗户面积：(1.26+5.07+1.26)*0.6=4.554
+* 窗户面积：(1.53+5.3+1.53)*1.23=10.2828
+* 窗户转角柱：1.23*2=2.46
 * 窗帘长度：7.6
 
 ## 空调机位
