--- a/装修前期笔记/卫生间设计.md
+++ b/装修前期笔记/卫生间设计.md
@@ -15,6 +15,7 @@
 * 镜柜高度不能太低，否则会开门会碰到电动牙刷等东西
 * 下沉只有300，沉箱降板少于350mm高的卫生间不建议安装蹲便器
 * 淋浴房玻璃做45度钻石，总长度1.53m，高度2m，总3.06平方
+* 花洒日丰和九牧有不带喷枪的形式，几百元
 
 ## 主卫
 
