--- a/装修总结/重庆建材市场列表.md
+++ b/装修总结/重庆建材市场列表.md
@@ -12,8 +12,8 @@
 * 第六空间国际家居：渝北sm广场旁
 * 建玛特购江北店：轻轨红旗河沟
 * 东方灯饰家居广场：轻轨鲤鱼池
-* 北滨路居然之家：化龙桥河对面金源时代，金源路口公交站
-* 建玛特购金源路店：化龙桥河对面金源时代，金源路口公交站
+* 北滨路居然之家：金源时代，金源路口公交站
+* 建玛特购金源路店：金源时代，金源路口公交站
 * 南坪红星美凯龙：轻轨站工贸
 * 二郎居然之家：轻轨站二郎
 * 二郎红星美凯龙：轻轨站二郎
