--- a/装修前期笔记/木材选择.md
+++ b/装修前期笔记/木材选择.md
@@ -94,16 +94,21 @@
 
 ### 全屋定制问题汇总
 
-* 板材种类，品牌，精板还是素板，厚度多少，有哪些花色，授权书有吗
-* 五金标配什么型号，品牌
-* 拉手标配什么
-* 拉直器多少钱一根
-* 抽屉多少钱一个
-* 灯光按米还是根计算，稳压器多少钱一个
-* 封边什么工艺
-* 开放格怎么算
-* 见光板怎么算
-* 付款比例怎么样
+* E0颗粒板柜体+双面PET+9mm背板多少钱
+* 板子品牌是什么，精板还是素板
+* 上面的配置双饰面多少钱
+* ENF上面的配置多少钱
+* 升级玻璃柜门多少钱
+* 配的五金是什么，保修多久
+* 拉手多少钱
+* 加不加拉直器，多少钱一根
+* 灯光开槽多少钱
+* PUR封边有没有恒温车间
+* 安装收不收费
+* 抽屉怎么算
+* 橱柜不要台面多少一米
+* 写字台多少钱一米
+* 隐形换鞋凳怎么算（换鞋凳轨道1688不到100一副）
 
 ### 全屋定制订购流程
 
