更新 基装注意事项.md

--- a/装修前期笔记/基装注意事项.md
+++ b/装修前期笔记/基装注意事项.md
@@ -47,6 +47,7 @@
 * 碳渣吸潮，如果漏水短时间发现不了；陶粒工艺复杂
 * 二次排水最好用专门的简二排
 ![](./img/%E7%AE%80%E4%BA%8C%E6%8E%92.jpg)
+* 墙砖做地压墙，这样才能在墙地之间留缝做美缝。墙压地没法做美缝
 
 ### 防水材料
 
