--- a/装修前期笔记/家电选择.md
+++ b/装修前期笔记/家电选择.md
@@ -137,6 +137,7 @@
 * 气泡洗：产生很多气泡，利用气泡爆炸的力量来清洁衣物
 * 电机：大部分都是bldc皮带变频电机，fpa直驱电机噪音更小，寿命更长。皮带电机六七年之后要更换皮带。皮带和直驱电机效果上差不多
 * 智能投放：可以根据衣服自动放洗衣液
+* 洗衣机烘干机都是靠水泵排水，所以做墙排水，不要做地排水
 
 海尔
 
