更新 瓷砖选择.m

--- a/装修前期笔记/瓷砖选择.md
+++ b/装修前期笔记/瓷砖选择.md
@@ -93,6 +93,11 @@ GB/T 4100-2015 陶瓷砖
 * lyn全屋聚脲花了不到一千
 * 游泳池的马赛克用水泥基填缝剂填缝的，说明用这个材料可以防水
 
+施工要点：
+* 所有需要填缝的地方都要3mm以上
+* 蹲便四周留缝5mm
+* 地漏四周留缝3mm，不能砖紧挨着地漏，挨着就没法把填缝剂打实，就会渗水到砂浆层去
+
 国标：  
 * JC/T 1004-2017 陶瓷砖填缝剂
 ![](./img/陶瓷砖填缝剂分类.jpg)
