更新 基装注意事项.md

--- a/装修前期笔记/基装注意事项.md
+++ b/装修前期笔记/基装注意事项.md
@@ -58,3 +58,7 @@
 
 * 成品的乳胶漆墙面从钢筋开始有很多层，分别是：钢筋->水泥砂浆->界面剂（墙固）->腻子->底漆->面漆
 * 成品的瓷砖墙：钢筋->水泥砂浆->界面剂（墙固）->腻子->底漆->面漆
+
+## 水泥
+
+* GB175-2023强制性国标发布，24年6月之后不允许生产和销售325水泥了，所以现在开始装修就要用425水泥
