更新 基装注意事项.md

--- a/装修前期笔记/基装注意事项.md
+++ b/装修前期笔记/基装注意事项.md
@@ -4,6 +4,7 @@
 
 * 分为混凝土墙（承重墙）和水泥砂浆墙（非承重墙）
 * 混凝土墙是不吸水的，水泥砂浆墙是吸水的，所以混凝土墙贴砖需要拉毛再用水泥砂浆厚贴，水泥砂浆墙表面不需要拉毛，直接在上面用水泥砂浆厚贴
+* 基于以上原因，界面剂分为砂浆用界面剂JC/T 2329-2015和混凝土界面剂Just907-2018
 * 混凝土墙是承重用的，不能拆，但表面几厘米以及无钢筋的梁处可以打掉，以穿空调孔或水电开槽
 * 墙固地固不要进场就刷，要在油工前几天刷。因为水电开槽，铺砖等工序会让墙固表面沾上很多灰尘，前面刷的白刷了
 * 地固只有铺木地板有用，铺砖没用。也要在铺地板前一两天刷
