更新 瓷砖选择.md

--- a/装修前期笔记/瓷砖选择.md
+++ b/装修前期笔记/瓷砖选择.md
@@ -81,7 +81,7 @@ GB/T 4100-2015 陶瓷砖
 ## 美缝剂
 
 种类：
-1. 勾缝剂：别名水泥基填缝剂，主成分白水泥，以前的老产品，快淘汰了
+1. 勾缝剂：别名水泥基填缝剂，主成分白水泥。国标JC/T1004-2017
 2. 美缝剂：成分环氧树脂+颜料。亮面的颜色，具有一定的抗污性
 3. 环氧彩砂：成分环氧树脂+玻璃采砂。颜色是哑光的。防水，适合在卫生间；容易吸附油烟污垢不好清除，不适合用在厨房。
 4. 聚脲：主成分天冬聚脲。耐污性很强。
