更新 瓷砖选择.md

--- a/装修前期笔记/瓷砖选择.md
+++ b/装修前期笔记/瓷砖选择.md
@@ -97,6 +97,7 @@ GB/T 4100-2015 陶瓷砖
 * 所有需要填缝的地方都要3mm以上
 * 蹲便四周留缝5mm
 * 地漏四周留缝3mm，不能砖紧挨着地漏，挨着就没法把填缝剂打实，就会渗水到砂浆层去
+* 铺砖完成后3天就填缝，要在木工用水之前就填，否则砖缝进水会反碱，但即使反碱了，清理掉还是一样填缝
 
 国标：  
 * JC/T 1004-2017 陶瓷砖填缝剂
