--- a/装修前期笔记/木材选择.md
+++ b/装修前期笔记/木材选择.md
@@ -79,18 +79,38 @@
    
 ### 板材品牌及特性
 
+* 浦茂 岭南木色：海洋板（木质素胶黏剂enf级，价格和颗粒板差不多）
+* 百得胜：多层板（enf）
+* 宁丰：颗粒板、欧松板、密度板
+* 百仕达：密度板
+* 高林：密度板、颗粒板、多层板
+* 天华：密度板
+* 丰林：密度板、颗粒板（enf）
+* 三威：密度板、颗粒板
 * 兔宝宝：生态板、多层板、欧松板（mdi），代工厂也很多
 * 千年舟：欧松板（进口mdi）、大豆胶板（大豆胶粘性差，不好用）
 * 莫干山：生态板、欧松板、多层板
+* 露水河：颗粒板（enf）、密度板、生态板
 * 福人：密度板、其他信息较少
 * 万华：禾香板素板（mdi，握钉力好像不行）
 * 大王椰：多层板、欧松板、欧松板（mdi）、生态板
-* 万象：生态板、多层板、欧松板
 * 鲁丽：欧松板（mdi）、欧松板、生态板
-* 华洲：颗粒板（mdi）、欧松板（mdi）、多层板、生态板
 * 大亚：没找到，其他渠道：颗粒板、密度板
+* 万象：生态板、多层板、欧松板
+* 华洲：颗粒板（mdi）、欧松板（mdi）、多层板、生态板
 * 三千方：没找到，其他渠道：多层板，很多地方都有三千方的代工厂，可以说是本地小品牌板材了
-* 浦茂：海洋板（木质素胶黏剂enf级）
+
+#### 饰面比原厂做的好的企业
+
+* 靓时
+* 瑞格森工
+* 红棉花
+* 亚恪3D
+* 依贝思达
+* 沃森柜客
+* 品嘉三慕
+* 贝隆
+* 乐颜
 
 ### 全屋定制问题汇总
 
