--- a/装修前期笔记/辅材选择.md
+++ b/装修前期笔记/辅材选择.md
@@ -13,6 +13,11 @@
 
 ## 密封胶选择
 
+### 单组分和双组分
+
+* 单组份是指买来就是单管胶，挤出来和空气反应自动固化
+* 双组分是指买来有两管，一管是胶，一管是固化剂，需要人工去将两者混合然后使用
+
 从成分分类，分为水基和硅基和混合
 
 ### 水基乳胶
@@ -37,7 +42,8 @@
 
 #### 美容胶
 
-玻璃胶的升级版
+* 好看的胶，有各种颜色
+* 美容胶好像不防水，硅宝执行的是环保标准
 
 #### 耐候胶
 
