--- a/装修总结/客厅.md
+++ b/装修总结/客厅.md
@@ -7,3 +7,16 @@
 * 阳台：推拉窗封窗
 * 餐边柜：里面有灯带，有玻璃柜
 * 卫生间外柜：下方是扫地机器人，扫地机器人下水墙壁穿孔到生活阳台排水
+
+## 灯具线路及开关
+
+* 玄关灯具1路
+* 鞋柜台面1路
+* 客厅过道1路
+* 餐桌1路
+* 沙发1路
+* 茶几1路
+* 电视背景墙1路
+* 客厅回型灯带1路
+* 阳台1路
+* 窗帘灯带1路
