--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -9,6 +9,7 @@
 * 总橱柜长度：4.99*2=9.98
 * 总木地板面积：15.719+7.668+7.367=30.754
 * 总地砖面积：31.2994+6.438+9.551+3.099+3.765+2.797=56.9494
+* 总踢脚线长度：30.31m（粗略估算，实际购买需要增加冗余量）
 
 依据：![](../装修资料/家里尺寸.jpg)
 
