--- a/装修前期笔记/家电选择.md
+++ b/装修前期笔记/家电选择.md
@@ -263,6 +263,16 @@
 * 海尔和美的都挺好
 * 万家乐有下置风机，还没看
 
+## 扫地机器人
+
+* 云鲸：最新的J4，每年出一代。自动添加清洁液，尘袋较小30天一换，基站没有集尘袋，不用清洁基站，防头发缠绕比较好，接米家。拖布没有机械臂采用扭屁股的方式拖墙脚比较费电，品控不稳定，可能噪音很大。找券3500+
+* 追觅：S10 pro ultra机械臂版，可以拖墙角，头发防缠绕但会缠到两边，自动添加清洁液，有基站集尘。不能接入米家 3000+
+* 科沃斯：最新的T20s pro，基站很大，需要比较多空间。托盘清洗不太方便，不能取下来
+* 石头：最新的p10 pro
+* 小米：m30 pro
+* 美的：w20洗地机器人，擅长拖油污
+* 结论：感觉应该再等等云鲸J5
+
 ## 购买地址
 
 * 中国燃气慧生活暖居体验馆 重庆市渝北区双湖支路6号-1-6号
