--- a/装修前期笔记/全屋智能方案预留.md
+++ b/装修前期笔记/全屋智能方案预留.md
@@ -29,9 +29,10 @@
 
 ## 窗帘控制
 
-* 窗帘只能是手动或者电动二选一
+* 客厅窗帘电机和次卧的日夜帘电机不一样，客厅这种垂下来的窗帘要用开合帘电机，日夜帘要用管状电机
+* 日夜帘只能是手动或者电动二选一，开合帘可以是手动加电动
 * 电机可以用插座或者接线两种方式通电
-* 杜亚M2窗帘电机：用料扎实，杜亚是电机界的龙头老大
+* 杜亚M2开合帘电机：用料扎实，杜亚是电机界的龙头老大
 * yeelight：也很不错
 * 奥科A-OK：
 * 尚飞somfy:
@@ -43,10 +44,3 @@
 ## 其他控制
 
 * 使用智能插座，控制电脑、管线机等。可以后加
-
-## 扫地机器人
-
-* 云鲸：每年出一代
-* 科沃斯：基站很大，需要比较多空间
-* 追觅：
-* 石头：
