更新 基装注意事项.md

--- a/装修前期笔记/基装注意事项.md
+++ b/装修前期笔记/基装注意事项.md
@@ -9,7 +9,7 @@
 * 墙固地固不要进场就刷，要在油工前几天刷。因为水电开槽，铺砖等工序会让墙固表面沾上很多灰尘，前面刷的白刷了
 * 地固只有铺木地板有用，铺砖没用。也要在铺地板前一两天刷
 * 地固国标：JC/T 907-2018 混凝土界面处理剂
-* 墙固国标：JC/T 468-2015 墙体用界面处理剂
+* 墙固国标：JG/T 468-2015 墙体用界面处理剂
 
 ## 费用
 
