--- a/装修前期笔记/厨房设计.md
+++ b/装修前期笔记/厨房设计.md
@@ -47,3 +47,7 @@
 * 背面防锈涂层
 * 总共60片，11套配件
 * 安装铝扣板的时候从灯的位置开始安装，这样虽可能会浪费板子，但避免从边上开始，灯的位置不合适
+
+## 橱柜拉篮
+
+* 悍高拉篮：底板基本都是304不锈钢，四周不一样，有玻璃的，有太空铝的，有304不锈钢的，个人觉得用太空铝的比较好
