--- a/装修总结/客厅.md
+++ b/装修总结/客厅.md
@@ -20,3 +20,8 @@
 * 客厅回型灯带1路
 * 阳台1路
 * 窗帘灯带1路
+
+## 其他
+
+* 3M高曼无痕魔力扣，用于挂画在墙上，可以不留痕
+* 魔方控制器：六个面，支持很多操作，可以配各种不同的智能场景。Aqara T1 pro、小米（好像都是很多年前的产品了，没有新款）
