--- a/装修总结/卧室.md
+++ b/装修总结/卧室.md
@@ -8,3 +8,9 @@
 ![](./img/窗台石做法.jpg)
 * 窗台石安装要点：窗台石两边底部挖2-3公分到红砖或承重墙，石材长度比两边找平层要长一点，两边做墙压地，放进去石材了再用水泥砂浆找平，刷乳胶漆，这样墙直接在窗台石上方
 ![](./img/窗台石安装.jpg)
+
+## 需要告知施工方的
+
+* 主卧的主灯三控，进门、床左右两边
+* 主卧的床头灯带和床头柜灯单控，都在床头柜上方
+* 主卧厕所门口的路灯双控、进门、梳妆台上方
