--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -10,6 +10,12 @@
 * 总木地板面积：15.719+7.668+7.367=30.754
 * 总地砖面积：31.2994+6.438+9.551+3.099+3.765+2.797=56.9494
 * 总踢脚线长度：30.31m（粗略估算，实际购买需要增加冗余量）
+* 800*800环氧美缝面积：6.6
+* 400*400环氧美缝面积：2.7+3.8=6.5
+* 400*800环氧美缝面积：19.824+18.048+13.968=51.84
+* 800*800水泥基美缝面积：39.5+3.1=42.6
+* 400*800水泥基美缝面积：10.032
+
 
 依据：![](../装修资料/家里尺寸.jpg)
 
@@ -52,16 +58,20 @@
 * 面积：6.604+2.659+0.288=9.551
 * 橱柜米数：2.62+1.2+0.6（包含烟道的拐角）+0.57=4.99m 
 * 烟道：0.51*0.26=0.1326m2
+* 贴墙砖面积：8.26*2.4=19.824
 
 ## 生活阳台
 
 * 面积：3.099
 * 柜子：0.3*2.5（预估高度）=0.75
+* 贴墙砖面积：4.18*2.4=10.032
 
 ## 主卫
 
 * 面积：3.765
+* 贴墙砖面积：7.52*2.4=18.048
 
 ## 公卫
 
 * 面积：2.797
+* 贴墙砖面积：5.82*2.4=13.968
