--- a/装修前期笔记/瓷砖选择.md
+++ b/装修前期笔记/瓷砖选择.md
@@ -81,13 +81,15 @@ GB/T 4100-2015 陶瓷砖
 ## 美缝剂
 
 种类：
-1. 勾缝剂：别名水泥基填缝剂，主成分白水泥。国标JC/T1004-2017
-2. 美缝剂：成分环氧树脂+颜料。亮面的颜色，具有一定的抗污性
-3. 环氧彩砂：成分环氧树脂+玻璃采砂。颜色是哑光的。防水，适合在卫生间；容易吸附油烟污垢不好清除，不适合用在厨房。
-4. 聚脲：主成分天冬聚脲。耐污性很强。
+0. 环保标准：GB18583-2008
+1. 美缝剂：成分环氧树脂+颜料。亮面的颜色，具有一定的抗污性。没有国标，最好不要选
+2. 水泥基填缝剂：国标JC/T1004-2017 CG2WA。缺点是表面不光滑，抗污性不如环氧和聚脲，会黄变
+3. 环氧彩砂：国标JC/T1004-2017 RG2。成分环氧树脂+玻璃采砂。一般买桶装的，双管的大多没达到国标。颜色很多。耐污性比水泥基填缝剂好。有些产品有易脱落的问题，要同时满足国标JC/T 547-2017 R2的，就没有脱落问题。日晒会有黄变的问题，但不很严重，卫生间首选。
+4. 聚脲：只有团体标准T/CECS 10158-2021，但是市面上很多都不满足这个。耐黄变很强，长久不变色，可以用在厨房，但产品质量参差不齐。粘接性没有要求，所以不要用再卫生间
 
-* 价格：1&lt;2&lt;3&lt;4
-* 价格合适的话可以选择聚脲
+使用建议：
+* 卫生间环氧采砂，预算不够的话墙面用水泥基，但是环氧和水泥基质感不一样，需要注意
+* 厨房重油污，首选聚脲，可用环氧，不要水泥基
 
 实例：
 * lyn全屋聚脲花了不到一千
@@ -98,6 +100,7 @@ GB/T 4100-2015 陶瓷砖
 * 蹲便四周留缝5mm
 * 地漏四周留缝3mm，不能砖紧挨着地漏，挨着就没法把填缝剂打实，就会渗水到砂浆层去
 * 铺砖完成后3天就填缝，要在木工用水之前就填，否则砖缝进水会反碱，但即使反碱了，清理掉还是一样填缝
+* 耐不耐污和收官擦洗质量有关系，擦得越平整，越耐污
 
 国标：  
 * JC/T 1004-2017 陶瓷砖填缝剂
