--- a/装修总结/厨房.md
+++ b/装修总结/厨房.md
@@ -1,5 +1,12 @@
 # 厨房
 
+## 施工要点
+
 * 全屋总进水口要注意离地高度，要可以安装前置过滤器的高度。惠尔顿前置，离地高度大于等于380mm，离墙距离大于等于65mm，长度大于等于260mm
 ![](./img/前置安装参数.jpg)
-* 美缝使用RG2环氧彩砂，比CG2WA更耐油污
+* 美缝使用桶装RG2环氧彩砂，比CG2WA更耐油污
+* 地砖和墙砖做地压墙，留朝天缝
+* 地砖和地漏一定要留缝，地砖和pvc管道一定要留缝，才能把美缝剂压实填满
+* 所有美缝的地方要有3mm
+
+![](./img/留缝.JPG)
