--- a/装修总结/生活阳台.md
+++ b/装修总结/生活阳台.md
@@ -4,3 +4,11 @@
 * 洗衣机烘干机：叠放，中间有挂衣板
 * 洗衣台：80cm宽
 * 灯：两颗灯
+
+## 施工要点
+
+* 地砖和墙砖做地压墙，留朝天缝
+* 地砖和地漏一定要留缝，地砖和pvc管道一定要留缝，才能把美缝剂压实填满
+* 所有美缝的地方要有3mm
+
+![](./img/留缝.JPG)
