--- a/装修总结/卧室.md
+++ b/装修总结/卧室.md
@@ -9,6 +9,17 @@
 * 窗台石安装要点：窗台石两边底部挖2-3公分到红砖或承重墙，石材长度比两边找平层要长一点，两边做墙压地，放进去石材了再用水泥砂浆找平，刷乳胶漆，这样墙直接在窗台石上方
 ![](./img/窗台石安装.jpg)
 
+## 开关数、插座数
+
+### 主卧
+
+* 梳妆台：五孔3个、网口1个、双开双控1个
+* 斗柜：五孔1个、网口1个
+* 床头柜：五孔1个、中途开关1个、双开单控1个
+* 床脚墙上：五孔两个
+* 主卫外墙上：双开双控1个
+* 共计：五孔7个、三开单控1个、双开单控2个（或者双开双控2个、双开单控1个、中途开关1个）
+
 ## 需要告知施工方的
 
 * 主卧的主灯三控，进门、床左右两边
