--- a/装修总结/卧室.md
+++ b/装修总结/卧室.md
@@ -11,14 +11,10 @@
 
 ## 开关数、插座数
 
-### 主卧
-
-* 梳妆台：五孔3个、网口1个、双开双控1个
-* 斗柜：五孔1个、网口1个
-* 床头柜：五孔1个、中途开关1个、双开单控1个
-* 床脚墙上：五孔两个
-* 主卫外墙上：双开双控1个
-* 共计：五孔7个、三开单控1个、双开单控2个（或者双开双控2个、双开单控1个、中途开关1个）
+* 主卧：五孔7个、六类网口2个、三开双控1个、双开双控2个（或者双开双控3个、中途开关1个）
+* 多功能房：单开双控2个、五孔9个、六类网口1个
+* 次卧：单开双控2个、五孔4个、六类网口1个
+* 总计：单开双控4个、双开双控2个、三开双控1个、五孔20个、六类网口4个
 
 ## 需要告知施工方的
 
