--- a/装修总结/厨房.md
+++ b/装修总结/厨房.md
@@ -1,5 +1,12 @@
 # 厨房
 
+## 开关插座数
+
+* 灶台面：五孔6个、单开双控2个
+* 水槽面：五孔4个、单开双控1个
+* 冰箱面：五孔3、单开双控1个
+* 总计：五孔13个、单开双控4个
+
 ## 施工要点
 
 * 全屋总进水口要注意离地高度，要可以安装前置过滤器的高度。惠尔顿前置，离地高度大于等于380mm，离墙距离大于等于65mm，长度大于等于260mm
