--- a/装修前期笔记/瓷砖选择.md
+++ b/装修前期笔记/瓷砖选择.md
@@ -110,7 +110,7 @@ GB/T 4100-2015 陶瓷砖
 聚脲的国标，理化性能是有规定的，但是本质上是防水材料用在填缝上，是一种尝试。
 
 品牌：
-* 锋影美缝：淘宝 广州锋凌新材料科技有限公司 水性桶装
+* 锋影美缝：淘宝 广州锋凌新材料科技有限公司 水性桶装d
 
 ## 重庆选购地点
 
