--- a/装修总结/厨房.md
+++ b/装修总结/厨房.md
@@ -2,10 +2,10 @@
 
 ## 开关插座数
 
-* 灶台面：五孔6个、单开双控2个
-* 水槽面：五孔4个、单开双控1个
-* 冰箱面：五孔3、单开双控1个
-* 总计：五孔13个、单开双控4个
+* 灶台面：五孔4个、五孔一开单控2个、单开双控2个
+* 水槽面：五孔2个、五孔一开单控2个、单开双控1个
+* 冰箱面：五孔1个、五孔一开单控2个、单开双控1个
+* 总计：五孔7个、五孔一开单控6个、单开双控4个
 
 ## 施工要点
 
