--- a/装修总结/客厅.md
+++ b/装修总结/客厅.md
@@ -8,18 +8,11 @@
 * 餐边柜：里面有灯带，有玻璃柜
 * 卫生间外柜：下方是扫地机器人，扫地机器人下水墙壁穿孔到生活阳台排水
 
-## 灯具线路及开关
+## 开关插座
 
-* 玄关灯具1路
-* 鞋柜台面1路
-* 客厅过道1路
-* 餐桌1路
-* 沙发1路
-* 茶几1路
-* 电视背景墙1路
-* 客厅回型灯带1路
-* 阳台1路
-* 窗帘灯带1路
+* 玄关：单开双控2个
+* 过道：双开双控3个、单开双控3个、四开双控1个、五孔15个、六类双网口1个
+* 总计：单开双控5个、双开双控3个、四开双控1个、五孔15个、六类双网口1个
 
 ## 其他
 
@@ -28,6 +21,7 @@
 
 ## 施工注意吩咐工人的
 
+* 餐边柜需要留一根灯线
 * 窗帘盒宽度要22cm以上，才能装梦幻帘12cm宽片
 * 阳台左右两侧都要预留电动窗帘位
 * 客厅灯带和阳台窗帘盒灯带做法
