--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -1,6 +1,6 @@
 [返回](../zx.md)
 
-# 家里尺寸
+# 家里总体数据
 
 * 总面积：31.2994+6.438+15.719+7.367+7.668+9.551+3.09+3.765+2.797+1.143=88.83
 * 半面积：6.438+1.143+2.384+1.984+2.068+3.099=17.116
@@ -15,9 +15,7 @@
 * 400*800环氧美缝面积：19.824+18.048+13.968=51.84
 * 800*800水泥基美缝面积：39.5+3.1=42.6
 * 400*800水泥基美缝面积：10.032
-
-
-依据：![](../装修资料/家里尺寸.jpg)
+* 总开关插座数：单开双控14个、双开双控5个、三开双控1个、四开双控1个、五孔49个、五孔一开单控6个、六类网口4个、六类双网口1个
 
 ## 客厅
 
