--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -16,6 +16,7 @@
 * 800*800水泥基美缝面积：39.5+3.1=42.6
 * 400*800水泥基美缝面积：10.032
 * 总开关插座数：单开双控14个、双开双控5个、三开双控1个、四开双控1个、五孔49个、五孔一开单控6个、六类网口4个、六类双网口1个
+* 总灯具数：吸顶灯2个、射灯26个、灯带41m、平板灯两个、浴霸两个 4082
 
 ## 客厅
 
