--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -10,9 +10,9 @@
 * 总木地板面积：15.719+7.668+7.367=30.754
 * 总地砖面积：31.2994+6.438+9.551+3.099+3.765+2.797=56.9494
 * 总踢脚线长度：30.31m（粗略估算，实际购买需要增加冗余量）
-* 800*800环氧美缝面积：6.6
-* 400*400环氧美缝面积：2.7+3.8=6.5
-* 400*800环氧美缝面积：19.824+18.048+13.968=51.84
+* 800*800环氧美缝面积：6.6（色一46.1）
+* 400*400环氧美缝面积：2.7+3.8=6.5（色二9.6）
+* 400*800环氧美缝面积：19.824+18.048+13.968=51.84（色一21.5，色二43.8）
 * 800*800水泥基美缝面积：39.5+3.1=42.6
 * 400*800水泥基美缝面积：10.032
 * 总开关插座数：单开双控14个、双开双控5个、三开双控1个、四开双控1个、五孔49个、五孔一开单控6个、六类网口4个、六类双网口1个
