--- a/装修前期笔记/辅材选择.md
+++ b/装修前期笔记/辅材选择.md
@@ -7,9 +7,11 @@
 
 ### 品牌选择
 
- 1. 正泰
- 2. 公牛
- 3. 德力西
+ 1. 正泰：
+ 2. 公牛：G12、G57（超薄）
+ 3. 德力西：827（超薄）
+ 4. 施耐德：珍铂（超薄）、皓呈、绎尚
+ 5. 西门子：荟绎（超薄）、睿宸（超薄）、皓彩、睿致
 
 ## 密封胶选择
 
