--- a/装修总结/生活阳台.md
+++ b/装修总结/生活阳台.md
@@ -11,8 +11,9 @@
 
 ## 施工要点
 
+* 热水器下方要两个五孔插座
 * 地砖和墙砖做地压墙，留朝天缝
 * 地砖和地漏一定要留缝，地砖和pvc管道一定要留缝，才能把美缝剂压实填满
-* 所有美缝的地方要有3mm
+* 所有美缝的地方要有2mm
 
 ![](./img/留缝.JPG)
