--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -29,6 +29,7 @@
 * 窗户面积：(1.53+5.3+1.53)*1.23=10.2828
 * 窗户转角柱：1.23*2=2.46
 * 窗帘长度：7.6
+* 门面积：11.3m
 
 ## 空调机位
 
@@ -62,6 +63,7 @@
 * 面积：3.099
 * 柜子：0.3*2.5（预估高度）=0.75
 * 贴墙砖面积：4.18*2.4=10.032
+* 窗：0.66*0.9=0.6
 
 ## 主卫
 
