--- a/装修总结/厕所.md
+++ b/装修总结/厕所.md
@@ -13,3 +13,11 @@
 * 所有美缝的地方要有2mm
 
 ![](./img/留缝.JPG)
+
+* 花洒的冷热出水口开槽深度要不多不少，贴完砖后持平，才能把花洒安装严实
+
+![](./img/冷热水管.jpg)
+
+* 淋浴区挡水条使用下沉式挡水条
+
+![](./img/下沉式挡水条.jpg)
