--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -15,6 +15,7 @@
 * 400*800环氧美缝面积：19.824+18.048+13.968=51.84（色一21.5，色二43.8）
 * 总开关插座数：单开双控14个、双开双控5个、三开双控1个、四开双控1个、五孔50个、五孔一开双控6个、六类网口4个、六类双网口1个
 * 总灯具数：吸顶灯2个、射灯26个、灯带41m、平板灯两个、浴霸两个
+* 总弹簧数：高 28+10+2+2=42 矮 1+2+6=9
 
 ## 客厅
 
