--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -56,6 +56,7 @@
 
 * 面积：6.604+2.659+0.288=9.551
 * 橱柜米数：2.62+1.2+0.6（包含烟道的拐角）+0.57=4.99m 
+* 台面米数：4.99m
 * 烟道：0.51*0.26=0.1326m2
 * 贴墙砖面积：8.26*2.4=19.824
 
