--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -16,6 +16,19 @@
 * 总开关插座数：单开双控14个、双开双控5个、三开双控1个、四开双控1个、五孔50个、五孔一开双控6个、六类网口4个、六类双网口1个
 * 总灯具数：吸顶灯2个、射灯26个、灯带41m、平板灯两个、浴霸两个
 * 总弹簧数：高 28+10+2+2=42 矮 1+2+6=9
+* 总空开数：2p63A\*1个、2p40A\*1个、1p+n32A\*1个、 1p+n25A\*2个、1p+n20A\*5个、1p+n16A\*2个
+* 强电回路：总开`2p 63A`、过欠压保护器
+  * 中央空调外机：`2p 40A`
+  * 中央空调内机：`1p+n 20A`
+  * 厨房：`1p+n 32A漏保`
+  * 主卫：`1p+n 25A漏保`
+  * 公卫：`1p+n 25A漏保`
+  * 常开：`1p+n 16A`
+  * 灯线1（父母房、客厅）：`1p+n 20A`
+  * 灯线2（主卧、书房、电视墙）：`1p+n 20A`
+  * 插座1（父母房、客厅）：`1p+n 20A`
+  * 插座2（主卧、书房、电视墙）：`1p+n 20A`
+  * 备用：`1p+n 16A`
 
 ## 客厅
 
