--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -23,12 +23,12 @@
   * 厨房：`1p+n 32A漏保`
   * 主卫：`1p+n 25A漏保`
   * 公卫：`1p+n 25A漏保`
-  * 常开：`1p+n 16A`
-  * 灯线1（父母房、客厅）：`1p+n 20A`
-  * 灯线2（主卧、书房、电视墙）：`1p+n 20A`
-  * 插座1（父母房、客厅）：`1p+n 20A`
-  * 插座2（主卧、书房、电视墙）：`1p+n 20A`
-  * 备用：`1p+n 16A`
+  * 常开：`1p+n 20A漏保`
+  * 灯线1（父母房、客厅）：`1p+n 16A`
+  * 灯线2（主卧、书房、电视墙）：`1p+n 16A`
+  * 插座1（父母房、客厅）：`1p+n 20A漏保`
+  * 插座2（主卧、书房、电视墙）：`1p+n 20A漏保`
+  * 备用：`1p+n 20A漏保`
 
 ## 客厅
 
