--- a/装修前期笔记/家电选择.md
+++ b/装修前期笔记/家电选择.md
@@ -68,6 +68,8 @@
 ## 厨卫吊顶
 
 * 欧普 3500-5000 两个套餐 铝扣板300*300 小套餐包含两个风扇和灯，大套餐额外包含凉霸一个
+* 有0.6、0.7、0.8规格的，但是这个只是标号不是铝扣板厚度。0.8的实际一般只有0.6mm厚。可以以甩起来声音大不大为判断标准。
+* 线下的一般边条会额外收费，线上的材料给你包完了
 
 ## 电视
 
