--- a/装修前期笔记/工艺注意事项.md
+++ b/装修前期笔记/工艺注意事项.md
@@ -54,3 +54,13 @@
 
 电线接头处要挂锡，以防铜线氧化  
 单股硬线对接时要规范缠绕
+
+## 中央空调安装注意事项
+
+* 注意内机吊杆的高度，要考虑到吊顶的高度等问题。吊杆是现场切割的。
+* 铜管要先在两端缠绕胶带，防止进入杂物灰尘，用折弯器弯管。
+* 焊接铜管要充氮焊接，以防高温氧化铜管。氧化之后会造成金属脱落，堵塞管道从而损坏机器
+* 内机距离顶面要有2cm以上的距离，不能贴顶安装
+* 保温棉和保温棉的接缝处要用胶水粘合，再用胶布包裹接缝处，才能杜绝冷凝水的产生
+* 打压测试40kg，保持48小时。外机打压35kg以免外机焊接处松动造成漏氟。在外机和内机的管道连接处涂抹肥皂水，若有气泡产生则说明有缺口
+* 外机安装时需要用水平仪保持横平竖直。底部要垫防震垫。要先检测地漏是否通畅
