--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -9,10 +9,9 @@
 * 总橱柜长度：4.99*2=9.98
 * 总木地板面积：15.719+7.668+7.367=30.754
 * 总地砖面积：31.2994+6.438+9.551+3.099+3.765+2.797=56.9494
+  * 800*800环氧美缝面积：灰 46.1
+  * 400*800环氧美缝面积：奶白 2.7+3.8+3.1+(11.3+6.6+8.3+7.1-1.46)\*2.4=86
 * 总踢脚线长度：30.31m（粗略估算，实际购买需要增加冗余量）
-* 800*800环氧美缝面积：6.6（色一46.1）
-* 400*400环氧美缝面积：2.7+3.8=6.5（色二9.6）
-* 400*800环氧美缝面积：19.824+18.048+13.968=51.84（色一21.5，色二43.8）
 * 总开关插座数：单开双控14个、双开双控5个、三开双控1个、四开双控1个、五孔50个、五孔一开双控6个、六类网口4个、六类双网口1个
 * 总灯具数：吸顶灯2个、射灯26个、灯带41m、平板灯两个、浴霸两个
 * 总弹簧数：高 28+10+2+2=42 矮 1+2+6=9
