--- a/装修前期笔记/乳胶漆选择.md
+++ b/装修前期笔记/乳胶漆选择.md
@@ -11,6 +11,7 @@
 ## 色彩
 
 * 分为电脑调色和手工调色。立邦有官方出的色卡，按照色卡可以直接让立邦官方调色好送来，后期补色也很方便。手工调色问题在于后期补色很难
+* 其他品牌和立邦的名字不一样，比如立邦的菱花白，其他品牌没有这个颜色，只能自己从其他品牌的色卡中选接近的颜色，可以根据颜色的rgb值进行选择。
 
 ## 涂刷方法
 
