--- a/装修前期笔记/家电选择.md
+++ b/装修前期笔记/家电选择.md
@@ -67,9 +67,9 @@
 
 ## 厨卫吊顶
 
-* 欧普 3500-5000 两个套餐 铝扣板300*300 小套餐包含两个风扇和灯，大套餐额外包含凉霸一个
 * 有0.6、0.7、0.8规格的，但是这个只是标号不是铝扣板厚度。0.8的实际一般只有0.6mm厚。可以以甩起来声音大不大为判断标准。
 * 线下的一般边条会额外收费，线上的材料给你包完了
+* 欧普 3500-5000 两个套餐 铝扣板300*300 小套餐包含两个风扇和灯，大套餐额外包含凉霸一个
 
 ## 电视
 
@@ -87,6 +87,7 @@
 * mini LED：发光点特别小的液晶电视，因为单个像素点更小，所以细腻的多
 * ULED：海信推的mini LED电视
 
+
 ### OLED
 
 * OLED的基本是高端电视才会有，很贵
@@ -96,7 +97,13 @@
 
 ### 其他
 
-* 很多电视有开机广告，目前知道TCL、雷鸟、索尼没有广告。广告可以打电话找客服关闭，法律规定的，但是关闭了还是做不到秒开电视进系统，要等一会
+* 开机广告：很多电视有开机广告，目前知道TCL、雷鸟、索尼没有广告。广告可以打电话找客服关闭，法律规定的，但是关闭了还是做不到秒开电视进系统，要等一会
+* 真HDR：屏幕对比度、峰值亮度、色域、控光分区等参数都要达到一个较高的水准才能认证；软件方面有杜比视界、HDR10+的认证，可以播放特定格式的片源。
+
+#### 型号选择
+
+* 雷鸟鹤7 24款 75寸 smzdm 4500+
+* 雷鸟鹤6 pro 75寸
 
 ## 冰箱
 
