--- a/装修前期笔记/石材选择.md
+++ b/装修前期笔记/石材选择.md
@@ -6,7 +6,7 @@
 
 * 人造石：
     * 石英石：便宜，硬度高，质量参差不齐，选到好的石英石很具性价比
-    * 岗石：硬度不够的石英石，要注意避雷
+    * 岗石（生态石）：不耐划、不耐酸、不抗晒的石英石，价格是石英石的一半，可以用在窗台石等不易划伤和酸蚀的地方节省成本。
     * 岩板：贵，密度比石英石更高，比石英石更硬，砍骨头有可能会裂，因为太脆
 * 天然石：
     * 花岗石：纹理比较单一，但耐酸碱，性能较好，比较便宜。如果花纹合适的话，某些地方可以用一点
