--- a/装修总结/家里尺寸.md
+++ b/装修总结/家里尺寸.md
@@ -19,11 +19,11 @@
 * 总空开数：2p63A\*1个、2p40A\*1个、1p+n32A\*1个、 1p+n25A\*2个、1p+n20A\*5个、1p+n16A\*2个
 * 强电回路：总开`2p 63A`、过欠压保护器
   * 中央空调外机：`2p 40A`
-  * 中央空调内机：`1p+n 20A`
+  * 中央空调内机：`1p+n 20A漏保`
   * 厨房：`1p+n 32A漏保`
+  * 常开：`1p+n 20A漏保`
   * 主卫：`1p+n 25A漏保`
   * 公卫：`1p+n 25A漏保`
-  * 常开：`1p+n 20A漏保`
   * 灯线1（父母房、客厅）：`1p+n 16A`
   * 灯线2（主卧、书房、电视墙）：`1p+n 16A`
   * 插座1（父母房、客厅）：`1p+n 20A漏保`
