--- a/装修前期笔记/家具选择.md
+++ b/装修前期笔记/家具选择.md
@@ -32,6 +32,8 @@
 很多沙发和身体接触面是真皮，非接触面是pu皮，这样为了降低成本。也挺合理的，非接触面没这么容易坏
 
 * 真皮：两个不同颜色的皮接触一分钟会有色移现象，就是染色
+  * 真皮等级：全青皮、半青皮。全青是皮本身没有疤痕，最高等级的皮，表面几乎没有化学处理。这种皮很娇贵，需要长期保养；半青是皮有少许疤痕，瑕疵，通过技术手段修复了的，表面做了些许的化学处理。耐用性更好一点，没有全青娇贵，保养上要求没这么高，价格也比全青低一些，适合家用。
+  * 真皮工艺：纳帕皮、摔纹皮、油蜡皮、荔枝纹。
 * 布艺：
   * 棉麻混纺：透气便宜不耐脏
   * 涤纶：耐磨回弹好不透气
