--- a/装修前期笔记/家电选择.md
+++ b/装修前期笔记/家电选择.md
@@ -8,13 +8,13 @@
 
 每个内机分p数的，有出风口和吸风口和检修口，所以要根据房间定制。
 
-* 制冷量：120、140、160，指的是12000W、14000W、16000W
-* 内机p数：1p=735w输入功率，p数\*735\*能效比=制冷量
-* 提升水泵：挺有必要的，可以帮助排出冷凝水，贵不了多少。不是所有空调都可以加
-* 1拖x：一个外机x个内机
+* 制冷量：120、140、160，指的是外机总制冷功率12000W、14000W、16000W
+* 内机p数：1p=735w输入功率，算需要的制冷量：p数\*735\*能效比=制冷量
+* 提升水泵：排水路径长的话挺有必要的，可以帮助排出冷凝水，贵不了多少。不是所有空调都可以加
+* 1拖n：一个外机n个内机
 * 外机风扇数量：影响散热速度，双风扇散热好一些
 * 多联机：使用传统空调的制冷剂方式制冷，一个外机拖多个内机。不要水机，要地暖才考虑水机
-* 控制方式：类似酒店的空调面板、遥控器、无线局域网功能。vrf控制器接入全屋智能
+* 控制方式：类似酒店的空调面板、遥控器、无线局域网功能。vrf控制器可接入全屋智能，需要单独买单独安装
 
 ### 安装相关
 
@@ -30,6 +30,7 @@
 
 ### 安装问题
 
+* 要特别注意安装配套的材料，某些个人商家会有两套安装标准，给你介绍的时候是高标准，结果后面说用高标准要加钱。
 * 铜管厚度
 * 冷凝水管什么材质的
 * 内机用不用双螺母垫片
@@ -53,23 +54,11 @@
 ### 购买渠道
 
 * 本地线下直营商最好，因为中央空调定制化程度很高，线上购买也是分配一个线下的经销商。
+* 最好选择国美、苏宁、重百电器等大的可信的线下商家，活动力度比较大且不容易跑路。红星美凯龙、居然之家里都是单个的小商家
 
-### 要问什么
+### 一些信息
 
-* 加项有哪些
-* 提升水泵收费
-* 出风口加长收费
-* 质保多久
-* 安装收费
-* 管道加长收费
-* 控制方式更改收费
-* 梁上打孔收费
-
-## 厨卫吊顶
-
-* 有0.6、0.7、0.8规格的，但是这个只是标号不是铝扣板厚度。0.8的实际一般只有0.6mm厚。可以以甩起来声音大不大为判断标准。
-* 线下的一般边条会额外收费，线上的材料给你包完了
-* 欧普 3500-5000 两个套餐 铝扣板300*300 小套餐包含两个风扇和灯，大套餐额外包含凉霸一个
+* 重百电器有商社精工安装，相对较为靠谱
 
 ## 电视
 
@@ -107,15 +96,16 @@
 
 ## 冰箱
 
-* 容量选择：一个人100L
+* 容量选择：看家里人数，一个人100L
 * 除菌净味技术可以认为全没用。什么EPP、臭氧除菌、光触媒，全没用。
+* 温控好的冰箱才是保鲜好的，可以看网上的温控评测
 * 双系统（双蒸发器）效果更好
 ![](./img/双蒸发器.png)
 * 能效等级一到五数字越小越好
 * 选购看升数、开门方式、嵌入式（左右预留空间多少）、是否超薄，品牌就行
-* 京东上大多冰箱都是5k-6k（10月）
 * 开门方式：十字门、法式（有抽屉）、对开门
-* 嵌入式：要在做橱柜前确定好冰箱，按尺寸定制橱柜，冰箱下方散热
+* 嵌入式：冰箱下方散热，左右不用预留空间
+* 要在做橱柜前确定好冰箱，按尺寸定制橱柜
 
 海尔
 
@@ -135,7 +125,7 @@
 * 双系统双循环：两个出风口，串味几率更低，温控更稳定
 * 除味：PST>PT
 * 超薄嵌入式：两边留1cm即可，厚度60cm和橱柜齐平，下置散热
-* 微晶一周鲜：美的7000+的产品和colmo上才有，不用
+* 微晶一周鲜：美的7000+的产品和colmo上才有
 * 尺寸
 ![](./img/美的bcd508尺寸1.png)
 ![](./img/美的bcd508尺寸2.png)
@@ -155,7 +145,6 @@
 * 精华洗：省水，先把水和洗衣液混合，再投入洗衣舱。传统的是在洗衣舱中浸泡混合的，混合不是很充分，洗衣效果不如预混合。有人说精华洗洗不干净，样本2
 * 直驱电机：FPA直驱电机，噪音更小
 * MATE82S 3000 性价比很高，精华洗2.0，直驱电机，智能投放
-* 抖音海尔智浦直播间，主播懂很多。晚上没人的时候问比较方便
 
 小天鹅
 
@@ -179,13 +168,15 @@
 * 变频定频：影响噪音，变频噪音较小。
 * 噪音大家都差不多，变频的相对小一点，如果衣服上有金属会撞击得很响，可以用一些小的纸包把扣子拉链包起来
 * 绒毛过滤：滤网层数，4层的还不错，2层3层的也很常见
+* 3D透视烘干：烘干效果更好，可以智能判断衣物是否干了
 
-海尔
+### 海尔
 
 * 176：EHGS100176XSU1 6799
 * MATE：EHGS100MATE7SU1 6799 功能一样，外观些许区别
 * 176xs套装：XQG100-BD14376LU1+EHGS100176XSU1 洗衣机精华洗、fpa直驱、双智能投放；烘干机双擎热泵，4层过滤
 * 可蹲176xs套装，小红书说4000+，有点离谱。抖音直播间元旦8000内
+* 叠黛和美H2，只支持竖放，但配置比较拉满
 
 ## 洗碗机
 
@@ -219,22 +210,23 @@
 * 新国标：GB/T 17713-2022，第一起草单位是方太
 * 侧吸：噪音大，面板容易沾油需要经常清洗，吸烟效果好，不易碰头。现在大部分都是侧吸
 * 顶吸：吸烟效果不好，但好看可嵌入，噪音低
-* 侧顶吸：侧吸大吸力，顶吸防逃逸，贵
+* 侧顶吸（欧式）：侧吸大吸力，顶吸防逃逸，贵
 * 风量：17-22立方，风量越大噪音越大
-* 最大静压：向烟道吹风的力量，我们几乎不用考虑。1000pa的是好的
+  * 工作风量：新国标的指标，油烟机可以手动开启的最大风量
+  * 最大风量：新国标的指标，烟道压力大时，油烟机自动开启的最大风量，不能手动开启，一般比工作风量大，但是只会持续一小会
+* 最大静压：向烟道吹风的力量，如果是高层，楼层越低需要的最大静压就很大。1000pa的是好的
 * 止逆阀：烟机安装时要安装，防止别人的油烟灌进来
 * 声压级噪音：噪音的指标，国标是73dB。要求声压级噪音+14<=73dB
+  * 工作噪声：工作风量下的噪声大小，更具有参考价值
 * 油脂分离度：滤网越密油脂分离度越高，但是越容易被凝结的油堵住。油脂分离度低了油就会附着在电机等部件上，久了对电机伤害很大。一般分离度高的品牌都有办法选密度刚好的滤网，尽量拦住油，且不会被凝结的油堵住。所以油脂分离度越高的型号一般都更好。方太老板能做90+
-* 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，油脂分离度越低外面板越不容易沾油。本质上自清洗只是延缓拆机清洗的时间。方太老板根本没有自清洗，因为它们的油脂分离度比较高，不容易沾油。
+* 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，油脂分离度越低外面板越不容易沾油。本质上自清洗只是延缓拆机清洗的时间。方太老板没有自清洗，因为它们的油脂分离度比较高，不容易沾油。
 * 要想安装成尽量无缝，应该先安装油烟机，再安装吊柜
 * 安装无缝的话要安装前淘宝买一个油烟机升降挂钩，到时候用上就可以无缝
-* 工作风量：新国标提出
-* 工作噪声：新国标提出
 
 ### 燃气灶
 
 * 热效率：热效率>=59%（一级能效），高的出一氧化碳少
-* 热负荷（火力）：因为要爆炒，所以要选4.5kW-5kW甚至更高的
+* 热负荷（火力）：因为要爆炒，所以要选4.5kW-5kW甚至更高的，主流的5-5.2的还是很多
 * 面板有两种：不锈钢和钢化玻璃，钢化玻璃小概率爆裂，但是易清洗
 * 天然气软管加点钱换成不锈钢的，更加耐用
 * 点火方式：电脉冲、压电陶瓷，好点的都用电脉冲
@@ -244,6 +236,7 @@
 * 火盖上的火孔：条形比圆孔的好，热效率高
 * 熄火保护：国家强制，有就行。离子感应式熄火灵敏但这玩意坏了整个灶都不能用了；热电式稳定可靠，但熄火5秒后才能停气，无安全风险。
 * 价格不超过一千也能买到不错的，1000-2000带防干烧功能，做工好，2000+不必要了
+* 通电方式：有插电的和电池的，电池的用一年半载要换电池
 
 ### 价格
 
@@ -274,14 +267,18 @@
 
 ## 扫地机器人
 
-* 云鲸：最新的J4，每年出一代。自动添加清洁液，尘袋较小30天一换，基站没有集尘袋，不用清洁基站，防头发缠绕比较好，接米家。拖布没有机械臂采用扭屁股的方式拖墙脚比较费电，品控不稳定，可能噪音很大。找券3500+
+* 头发防缠绕：刷头特殊形状，刀片切割，各厂方案不同
+* 基站自清洁：扫了地之后会存到基站内，有自清洁的会比较干净
+* 墙脚拖地：机械臂伸缩比较好，结合扭屁股的模式
+* 爬坡：有的家庭地面不平，比如厨房门口的地轨，会挡住机器人进入，此时就需要机器人具有一定的爬坡能力越过这个地轨。
+* 视觉避障方案：结合ai和传感器，传感器有可见光双目视觉，红外，结构光等，ai可以识别手机线，粪便，桌子板凳等东西，每家方案不一样，看自己需求。
+* 智能语音：语音唤醒机器人
+
+### 品牌 
+
+* 云鲸：J5，特色是防缠绕，智能方面差一点
 * 追觅：S10 pro ultra机械臂版，可以拖墙角，头发防缠绕但会缠到两边，自动添加清洁液，有基站集尘。不能接入米家 3000+
 * 科沃斯：最新的T20s pro，基站很大，需要比较多空间。托盘清洗不太方便，不能取下来
 * 石头：最新的p10 pro
 * 小米：m30 pro
 * 美的：w20洗地机器人，擅长拖油污
-* 结论：感觉应该再等等云鲸J5
-
-## 购买地址
-
-* 中国燃气慧生活暖居体验馆 重庆市渝北区双湖支路6号-1-6号
