--- a/装修前期笔记/厨房设计.md
+++ b/装修前期笔记/厨房设计.md
@@ -36,11 +36,12 @@
 ## 橱柜设计
 
 * 地柜做高低台
-* 高台的部分做台面下卦，低台不做
+* 高台的部分做台面下挂，低台不做
 ![](./img/台面下挂.jpg)
 * 洗切区高度为手肘高度-150mm
 * 炒菜区高度为手肘高度-230mm
 
 ## 橱柜拉篮
 
-* 悍高拉篮：底板基本都是304不锈钢，四周不一样，有玻璃的，有太空铝的，有304不锈钢的，个人觉得用太空铝的比较好
+* 悍高拉篮：底板基本都是304不锈钢，四周不一样，有玻璃的，有太空铝的，有304不锈钢的
+* 希勒系列最好，但也最贵 
