--- a/装修前期笔记/瓷砖选择.md
+++ b/装修前期笔记/瓷砖选择.md
@@ -112,6 +112,31 @@ GB/T 4100-2015 陶瓷砖
 品牌：
 * 锋影美缝：淘宝 广州锋凌新材料科技有限公司 水性桶装d
 
+## 二线品牌
+
+* 单品牌：斯米克 特地 芒果 诺宝 博德 欧文莱 伊派爱玛仕 道格拉斯 简品 简选（仿简一）
+* 金舵企业：金舵 金牌天纬 强牌 星期七（2个产区）
+* 汇亚企业：汇亚 玛缇 恒福
+* 金牌企业：金牌亚洲
+* 冠星企业：罗马利奧 冠星王 格仕陶
+* 宏源企业：卓远 高德（佛山制造
+* 将军企业：大将军 神韵 长安 绿苹果
+* 嘉俊企业：嚞俊
+* 依诺企业：依诺
+* 惠达企业：惠达
+* 金丝玉玛企业：金丝玉玛 金玉名家
+* 罗曼蒂克企业：罗曼缔克 伊莉莎白（2个产区）
+* 新中源企业：新中源 圣德堡 新南悦 新粤 朗高 裕景 紫砂 天伟 巴丹 珠江（4个产区）
+* 昊晨企业：新濠（防滑大理石瓷砖）壹号 维罗生态
+* 乐华企业：箭牌 安华 法恩莎
+* 新润城企业：新润城 裕成 汇强 壹加壹
+* 誉辉企业：誉辉 欧福莱（佛山制造）
+* 欧雅企业：欧美 金欧雅 奥米茄 意利宝（2个产区） 
+* 豪帅企业：陶元帅 威尔顿
+* 金巴利企业：雅俊：金雅陶.金豪：意乐陶：金巴利：菲尔顿（性价比） 
+* 兴辉企业：兴辉 加西亚
+* 新恒隆企业：新恒隆.骏步 利特邦 潮元素 拓维 摇钱树 美立方
+
 ## 重庆选购地点
 
 * 马家岩建材城
