--- a/装修前期笔记/辅材选择.md
+++ b/装修前期笔记/辅材选择.md
@@ -12,6 +12,7 @@
  3. 德力西：827（超薄）
  4. 施耐德：珍铂（超薄）、皓呈、绎尚
  5. 西门子：荟绎（超薄）、睿宸（超薄）、皓彩、睿致
+ 6. 松下：悦畔
 
 ## 密封胶选择
 
@@ -42,14 +43,19 @@
 
 #### 玻璃胶
 
+* 用于粘贴硬质材料和收缝，比如瓷砖和地砖、不锈钢和瓷砖等
+* 具有收缩性，不能用于乳胶漆，会因为热胀冷缩把乳胶漆拉裂
+
 #### 美容胶
 
 * 好看的胶，有各种颜色
+* 防霉性差一些，可以用于室内干燥区域，不可用于厨卫等有水重油污区域
 * 美容胶好像不防水，硅宝执行的是环保标准
+* 有的美容胶热胀冷缩性比较小，可以用于乳胶漆和门套的收缝，柜子和乳胶漆的收缝。
 
 #### 耐候胶
 
-室外用，一般是门窗的玻璃型材交界处
+室外用，一般是门窗的玻璃型材交界处，颜色一般是深色
 
 ### 品牌
 
