--- a/装修前期笔记/工艺注意事项.md
+++ b/装修前期笔记/工艺注意事项.md
@@ -5,20 +5,15 @@
 * 要用双层石膏板夹大芯板，防止开裂变形
 * 窗帘导轨上面也要一个大芯板，用于找平
 
-## 墙面找平
+## 墙面归方找平
 
-* 顺平：
-* 垂平：
-* 冲筋打点：
-
-## 墙面找方
-
-* 激光
+* 顺平：师傅手工找平，目视找平，最省工，但基本上都有误差，会导致射灯打上去有波浪，柜子靠墙有缝的问题
+* 垂平（冲筋找平）：一种高级的费工的找平工艺，贵，但可以使找平后墙面误差在2mm以内，射灯打上去均匀，柜子靠墙也几乎没有缝
 
 ## 墙砖铺贴
 
 * 薄贴法：用瓷砖胶（不是瓷砖背胶）薄贴（不能厚贴）
-* 拉毛+水泥砂浆：可以做到与建筑同寿
+* 拉毛+水泥砂浆：可以做到与建筑同寿，但是贴的很厚，比薄贴占室内空间和层高，相对便宜
 * 干挂法：一般不用
 
 ## 墙面拉毛
@@ -30,7 +25,7 @@
 
 ## 地面找平
 
-* 自流平，要加钱
+* 自流平，要加钱，一般是铺木地板前可以做，能防止木地板铺好了走上去嘎吱响
 
 ## 墙面挂网
 
@@ -54,6 +49,11 @@
 
 电线接头处要挂锡，以防铜线氧化  
 单股硬线对接时要规范缠绕
+
+## 海棠角
+
+瓷砖边上斜切45度角，最好找瓷砖厂家做好，工人现场做容易做坏。
+![](./img/%E6%B5%B7%E6%A3%A0%E8%A7%92.jpg)
 
 ## 中央空调安装注意事项
 
