--- a/装修前期笔记/软装选择.md
+++ b/装修前期笔记/软装选择.md
@@ -72,3 +72,22 @@
 * 蒙哥 八公里
   * 弹簧加黄麻加一点棉的舒适层 2300左右
   * 上面的换山棕要1900
+
+## 窗帘
+
+### 布帘
+
+* 材质都是涤纶，根据工艺不同分为绒布、高精密、雪尼尔、棉麻
+* 遮光度用手机放背后打光，很暗的遮光度高
+* 垂感：像西装面料的不锤，要做额外收费的高温定型，可以紧握面料再松开，能立马还原的垂度就很好
+* 现代风适合雪尼尔
+
+### 纱帘
+
+* 镜面纱：朝外的是有一点反光的，可以提升遮阳效果。朝内的一面可以做各种纹理。垂感中等。价格50-70一米
+* 幻影纱: 透光不透人，垂感较差，遮光效果比较好
+* 金刚砂：透光度较高，会透人，垂感较好，适合搭配布帘在卧室使用
+
+### 轨道
+
+* 
